WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
40401
REGRESSION: [Qt] When dragging onto a page that handles the drag in Javascript it will be a move and not a copy by default
https://bugs.webkit.org/show_bug.cgi?id=40401
Summary
REGRESSION: [Qt] When dragging onto a page that handles the drag in Javascrip...
qt-info
Reported
2010-06-09 22:26:26 PDT
Created
attachment 58328
[details]
Example HTML [Qt] When dragging onto a page that handles the drag in Javascript it will be a move and not a copy by default. This is fine in Qt 4.6.3, but not in Qt 4.7.0. Attached is a test html file, just drag a file into the draggable area (you should see some debug in the window) and then drop, this will cause the file to be deleted as it was a move event. Whereas in Qt 4.6.3 it was a copy event. The attached patch solves the problem by using the more correct acceptProposedAction() instead of accept().
Attachments
Example HTML
(2.01 KB, text/html)
2010-06-09 22:26 PDT
,
qt-info
no flags
Details
Suggested patch
(2.19 KB, patch)
2010-06-09 22:28 PDT
,
qt-info
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
qt-info
Comment 1
2010-06-09 22:28:19 PDT
Created
attachment 58329
[details]
Suggested patch
Simon Hausmann
Comment 2
2010-06-10 00:48:34 PDT
Confirmed on X11, too.
Simon Hausmann
Comment 3
2010-06-10 00:52:27 PDT
Andy's patch is correct
Simon Hausmann
Comment 4
2010-06-10 01:03:19 PDT
Committed
r60942
: <
http://trac.webkit.org/changeset/60942
>
Simon Hausmann
Comment 5
2010-06-10 01:22:46 PDT
Revision
r60942
cherry-picked into qtwebkit-2.0 with commit 0f40b3b53c931a8161babfd2335067de0970dfd5
WebKit Review Bot
Comment 6
2010-06-10 01:42:24 PDT
http://trac.webkit.org/changeset/60942
might have broken Chromium Linux Release The following changes are on the blame list:
http://trac.webkit.org/changeset/60942
http://trac.webkit.org/changeset/60943
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug