REGRESSION: [Qt] When dragging onto a page that handles the drag in Javascript it will be a move and not a copy by default https://bugs.webkit.org/show_bug.cgi?id=40401

Patch by Andy Shaw <andy.shaw@nokia.com> on 2010-06-10
Reviewed by Simon Hausmann.

The correct pattern in Qt for Dnd events is to use acceptProposedAction() instead
of accept().

* Api/qwebpage.cpp:
(QWebPagePrivate::dragEnterEvent):
(QWebPagePrivate::dragMoveEvent):
(QWebPagePrivate::dropEvent):

git-svn-id: svn://svn.chromium.org/blink/trunk@60942 bbb929c8-8fbe-4397-9dbb-9b2b20218538